--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <header>
       <div class="header-content">
-        <h1 class="header-h1">Cornelius &amp; Cylinder.</h1>
+        <h1 class="header-h1 wow fadeInDown">Cornelius &amp; Cylinder.</h1>
         <p class="header-p">
           Prvi i jedini Steam Punk restoran u Srbiji.
         </p>
@@ -80,9 +80,9 @@
 
     <section id="boxes">
       <div class="flex-container">
-        <div class="row">
-          <div class="wow fadeInLeft boxes-image image-1"></div>
-          <div class="wow fadeInRight boxes-content">
+        <div class="row wow fadeInRight">
+          <div class="boxes-image image-1"></div>
+          <div class="boxes-content">
             <h2 id="lang-text1" class="boxes-h2">TEKST</h2>
             <p class="boxes-p">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro in
@@ -96,8 +96,8 @@
       </div>
 
       <div class="flex-container">
-        <div class="row">
-          <div class="wow fadeInLeft boxes-content">
+        <div class="row wow fadeInLeft">
+          <div class="boxes-content">
             <h2 class="boxes-h2">TEKST</h2>
             <p class="boxes-p">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro in
@@ -107,14 +107,14 @@
             </p>
             <a href="#" class="boxes-btn">PROCITAJ VISE</a>
           </div>
-          <div class="wow fadeInRight boxes-image image-2"></div>
+          <div class="boxes-image image-2"></div>
         </div>
       </div>
 
       <div class="flex-container">
-        <div class="row">
-          <div class="wow fadeInLeft boxes-image image-3"></div>
-          <div class="wow fadeInRight boxes-content">
+        <div class="row wow fadeInRight">
+          <div class="boxes-image image-3"></div>
+          <div class="boxes-content">
             <h2 class="boxes-h2">TEKST</h2>
             <p class="boxes-p">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro in
@@ -131,24 +131,26 @@
     <section id="discover">
       <div class="discover-content">
         <div class="discover-item discover-food">
-          <h2 class="discover-h2">RESTORAN</h2>
-          <p class="discover-p">
+          <h2 class="discover-h2 wow fadeInUp">RESTORAN</h2>
+          <p class="discover-p wow fadeInUp">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolores
             voluptas dolorem voluptates voluptatibus alias enim dolor. Error
             optio doloribus dignissimos nam facilis in ea, cum dicta non harum
             cumque?
           </p>
-          <a href="menu.html" class="discover-btn">OTKRIJ NAS MENI</a>
+          <a href="menu.html" class="discover-btn wow fadeInUp"
+            >OTKRIJ NAS MENI</a
+          >
         </div>
         <div class="discover-item discover-drinks">
-          <h2 class="discover-h2">KAFE-BAR</h2>
-          <p class="discover-p">
+          <h2 class="discover-h2 wow fadeInUp">KAFE-BAR</h2>
+          <p class="discover-p wow fadeInUp">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolores
             voluptas dolorem voluptates voluptatibus alias enim dolor. Error
             optio doloribus dignissimos nam facilis in ea, cum dicta non harum
             cumque?
           </p>
-          <a href="menu.html" class="discover-btn">KARTA PICA</a>
+          <a href="menu.html" class="discover-btn wow fadeInUp">KARTA PICA</a>
         </div>
       </div>
     </section>
@@ -249,10 +251,10 @@
       </div>
     </footer>
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     <!-- <script src="assets/js/anime.min.js"></script> -->
-    <!-- <script type="text/javascript" src="assets/js/wow.js"></script> -->
+    <script type="text/javascript" src="assets/js/wow.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
     <!-- <script type="text/javascript" src="assets/js/anime.js"></script> -->
   </body>
