--- a/about.html
+++ b/about.html
@@ -85,14 +85,14 @@
             praesentium adipisci enim, maiores aut consequatur error, odit
             laborum voluptas.
           </p>
-          <!-- <div class="abs-img"></div> -->
+          <div class="abs-img"></div>
         </div>
       </div>
 
       <div class="flex-about">
         <div class="about-container">
           <div class="about-image about-img-half"></div>
-          <div class="about-content">
+          <div class="about-content wow fadeInRight">
             <h2 class="about-h2">OUR STORY</h2>
             <p class="about-p">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
@@ -104,11 +104,7 @@
               nihil. Magni enim numquam delectus, et libero sed recusandae.
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat,
               vel quam sint cum consequatur tempore est libero provident itaque.
-              Ipsa sed modi magni vel porro aspernatur optio debitis? Saepe,
-              consectetur. Lorem ipsum dolor sit amet, consectetur adipisicing
-              elit. Iure quae fugit unde. Inventore blanditiis reprehenderit
-              repellat. Veniam earum, illum est praesentium adipisci enim,
-              maiores aut consequatur error, odit laborum voluptas.
+              Ipsa sed modi magni vel porro aspernatur optio debitis.
             </p>
           </div>
         </div>
@@ -138,10 +134,10 @@
       </div>
     </footer>
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     <!-- <script src="assets/js/anime.min.js"></script> -->
-    <!-- <script type="text/javascript" src="assets/js/wow.js"></script> -->
+    <script type="text/javascript" src="assets/js/wow.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
     <!-- <script type="text/javascript" src="assets/js/anime.js"></script> -->
   </body>
