--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 
     <section id="about">
       <div class="about-image">
-        <h2 class="image-h2">GLAVNA JELA</h2>
+        <h2 class="image-h2">ABOUT US</h2>
       </div>
 
       <div class="abs-container">
@@ -79,11 +79,7 @@
             enim numquam delectus, et libero sed recusandae. Lorem ipsum dolor,
             sit amet consectetur adipisicing elit. Placeat, vel quam sint cum
             consequatur tempore est libero provident itaque. Ipsa sed modi magni
-            vel porro aspernatur optio debitis? Saepe, consectetur. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit. Iure quae fugit unde.
-            Inventore blanditiis reprehenderit repellat. Veniam earum, illum est
-            praesentium adipisci enim, maiores aut consequatur error, odit
-            laborum voluptas.
+            vel porro aspernatur optio debitis.
           </p>
           <div class="abs-img"></div>
         </div>
@@ -102,9 +98,6 @@
               consectetur adipisicing elit. Magnam necessitatibus magni vitae,
               fugiat sed eaque autem facilis laborum delectus quod. Accusamus,
               nihil. Magni enim numquam delectus, et libero sed recusandae.
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat,
-              vel quam sint cum consequatur tempore est libero provident itaque.
-              Ipsa sed modi magni vel porro aspernatur optio debitis.
             </p>
           </div>
         </div>
