--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
       <div class="flex-about">
         <div class="about-container">
           <div class="about-image about-img-half"></div>
-          <div class="about-content wow fadeInRight">
+          <div class="about-content">
             <h2 class="about-h2">OUR STORY</h2>
             <p class="about-p">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
