--- a/menu.html
+++ b/menu.html
@@ -66,19 +66,19 @@
     </div>
     <div class="menu-container">
       <div class="menu-nav-go">
-        <a href="#" class="menu-nav-a menu-nav-a-on">RESTORAN</a>
-        <a href="menu-caffe.html" class="menu-nav-a">KAFE-BAR</a>
+        <a href="#" class="menu-nav-a menu-nav-a-on" id="restaurant">RESTORAN</a>
+        <a href="menu-caffe.html" class="menu-nav-a" id="caffeBar">KAFE-BAR</a>
       </div>
       <h2 class="menu-h2 mainDishes">GLAVNA JELA</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">JUNECI CHEESEBURGER</p>
+              <p class="item-name" id="name1">JUNECI CHEESEBURGER</p>
               <p class="item-price">575</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p " id="desc1">
                 junece meso, cedar sir, karamelizovani luk, kiseli krastavcici, iceberg salata, paradajz, panceta
                 /pomfrit, pohovani luk/
               </p>
@@ -91,7 +91,7 @@
               <p class="item-price">790</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc2">
                 Angus govedje meso, ementaler, crveni luk, pecurke, iceberg salata, paradajz /pomfrit, pohovani luk/
               </p>
             </div>
@@ -103,7 +103,7 @@
               <p class="item-price">495</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc3">
                 cepkano sporo peceno svinjsko meso u BBQ sosu, coleslaw salata /pomfrit/
               </p>
             </div>
@@ -111,11 +111,11 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">JUNECI BIFTEK NA GRILU (300g)</p>
+              <p class="item-name" id="name4">JUNECI BIFTEK NA GRILU (300g)</p>
               <p class="item-price">1.490</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc4">
                 pileca krilca u pikantnom buffalo sosu, garlic hleb, sos od plavog sira
               </p>
             </div>
@@ -125,11 +125,11 @@
         <div class="col">
             <div class="menu-item">
                 <div class="items">
-                  <p class="item-name">BUFFALO KRILCA (500g)</p>
+                  <p class="item-name" id="name5">BUFFALO KRILCA (500g)</p>
                   <p class="item-price">545</p>
                 </div>
                 <div class="menu-desc">
-                  <p class="desc-p">
+                  <p class="desc-p" id="desc5">
                     pileca krilca u pikantnom buffalo sosu, garlic hleb, sos od plavog sira
                   </p>
                 </div>
@@ -137,22 +137,22 @@
   
               <div class="menu-item">
                   <div class="items">
-                    <p class="item-name">MARINIRANA SVINJSKA REBRA (700g)</p>
+                    <p class="item-name" id="name6">MARINIRANA SVINJSKA REBRA (700g)</p>
                     <p class="item-price">850</p>
                   </div>
                   <div class="menu-desc">
-                    <p class="desc-p">
+                    <p class="desc-p" id="desc6">
                       sporo pecena, glazirana, kukuruz secerac, coleslaw salata, wedges krompir, BBQ sos
                     </p>
                   </div>
                 </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">PILETINA TANDORI</p>
+              <p class="item-name" id="name7">PILETINA TANDORI</p>
               <p class="item-price">695</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc7">
                 suvo marinirani pileci fileti, kari pirinac sa povrcem
               </p>
             </div>
