--- a/menu.html
+++ b/menu.html
@@ -160,16 +160,16 @@
         </div>
       </div>
 
-      <h2 class="menu-h2 mainDishes">WURST</h2>
+      <h2 class="menu-h2">WURST</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">PREMIUM KOBASICE (220g)</p>
+              <p class="item-name" id="name8">PREMIUM KOBASICE (220g)</p>
               <p class="item-price">625</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc8">
                 junece i svinjsko meso, zacinjeni wedges krompir, senf
               </p>
             </div>
@@ -177,11 +177,11 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">KOBASICE SA SIROM (200g)</p>
+              <p class="item-name" id="name9">KOBASICE SA SIROM (200g)</p>
               <p class="item-price">595</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc9">
                 zacinjeni wedges krompir, senf
               </p>
             </div>
@@ -191,11 +191,11 @@
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">LJUTE KOBASICE</p>
+              <p class="item-name" id="name10">LJUTE KOBASICE</p>
               <p class="item-price">595</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc10">
                 zacinjeni wedges krompir, senf
               </p>
             </div>
@@ -203,7 +203,7 @@
         </div>
       </div>
 
-      <h2 class="menu-h2 mainDishes">NESTO SASVIM POSEBNO (ZA 2 OSOBE)</h2>
+      <h2 class="menu-h2" id="special">NESTO SASVIM POSEBNO (ZA 2 OSOBE)</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
@@ -212,7 +212,7 @@
               <p class="item-price">1.450</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc11">
                 njeguski prsut, brusketi sa paradajzom, brie sir, suve sljive sa halapenjo paprikom rolovane pancetom, parmezan, marinirani kozji sir, masline
               </p>
             </div>
@@ -224,7 +224,7 @@
               <p class="item-price">1.390</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc12">
                 buffalo krilca, svinjska rebra, kobasice, wedges krompir, pohovani luk, BBQ sos, sos od plavog sira
               </p>
             </div>
@@ -238,7 +238,7 @@
               <p class="item-price">1.150</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc13">
                 tortilja sa piletinom, tortilja sa cili mesom, empanadas, pohovana mozarella, pohovane masline, coleslaw salata, pohovani luk
               </p>
             </div>
@@ -246,7 +246,7 @@
         </div>
       </div>
 
-      <h2 class="menu-h2 mainDishes">STARENO MESO</h2>
+      <h2 class="menu-h2" id="steaks">STARENO MESO</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
@@ -255,7 +255,7 @@
               <p class="item-price">2.900 / KG</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc14">
                 punjeni krompir, sos po izboru
               </p>
             </div>
@@ -269,7 +269,7 @@
               <p class="item-price">1.950</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc15">
                 punjeni krompir, sos po izboru
               </p>
             </div>
@@ -283,19 +283,19 @@
 
   <section class="menu">
     <div class="menu-image">
-      <h2 class="image-h2">SUPE</h2>
+      <h2 class="image-h2 soup">SUPE</h2>
     </div>
     <div class="menu-container">
-      <h2 class="menu-h2">SUPE</h2>
+      <h2 class="menu-h2 soup">SUPE</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">POTAZ DANA OD POVRCA</p>
+              <p class="item-name" id="name16">POTAZ DANA OD POVRCA</p>
               <p class="item-price">225</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc16">
                 krutoni, parmezan
               </p>
             </div>
@@ -304,7 +304,7 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">PILECA SUPA</p>
+              <p class="item-name" id="name17">PILECA SUPA</p>
               <p class="item-price">215</p>
             </div>
             <div class="menu-desc">
@@ -317,11 +317,11 @@
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">TELECA CORBA</p>
+              <p class="item-name" id="name18">TELECA CORBA</p>
               <p class="item-price">269</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc18">
                 teletina, kisela pavlaka
               </p>
             </div>
@@ -333,19 +333,19 @@
 
   <section class="menu">
     <div class="menu-image">
-      <h2 class="image-h2">SALATE</h2>
+      <h2 class="image-h2" id="salads">SALATE</h2>
     </div>
     <div class="menu-container">
-      <h2 class="menu-h2">OBROK SALATE</h2>
+      <h2 class="menu-h2" id="mealSalads">OBROK SALATE</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">CEZAR SALATA</p>
+              <p class="item-name" id="name19">CEZAR SALATA</p>
               <p class="item-price">625</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc19">
                 piletina, iceberg salata, dresing, panceta, parmezan
               </p>
             </div>
@@ -353,11 +353,11 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">GRCKA SALATA</p>
+              <p class="item-name" id="name20">GRCKA SALATA</p>
               <p class="item-price">395</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc20">
                 paradajz, paprika, krastavac, feta, masline
               </p>
             </div>
@@ -369,7 +369,7 @@
               <p class="item-price">425</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc21">
                 mix zelenih salata, krastavac, avokado, parmezan, dresing
               </p>
             </div>
@@ -379,11 +379,11 @@
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">CVEKLA SALATA</p>
+              <p class="item-name" id="name22">CVEKLA SALATA</p>
               <p class="item-price">545</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc22">
                 cvekla, rukola, marinirani sir, golica, dresing
               </p>
             </div>
@@ -391,11 +391,11 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">KINOA SA BUNDEVOM</p>
+              <p class="item-name" id="name23">KINOA SA BUNDEVOM</p>
               <p class="item-price">595</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc23">
                 kinoa, pecena bundeva, baby spanac, crni susam, dresing
               </p>
             </div>
@@ -407,7 +407,7 @@
               <p class="item-price">740</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc24">
                 iceberg, rukola, angus govedina, dimljena piletina, panceta, parmezan, ranch sos
               </p>
             </div>
@@ -415,12 +415,12 @@
         </div>
       </div>
 
-      <h2 class="menu-h2">SALATE</h2>
+      <h2 class="menu-h2" id="salad">SALATE</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">SEZONSKE SALATE</p>
+              <p class="item-name" id="name25">SEZONSKE SALATE</p>
               <p class="item-price">200</p>
             </div>
             <div class="menu-desc">
@@ -433,7 +433,7 @@
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">SRPSKA SALATA</p>
+              <p class="item-name" id="name26">SRPSKA SALATA</p>
               <p class="item-price">245</p>
             </div>
             <div class="menu-desc">
@@ -450,10 +450,10 @@
 
   <section class="menu">
     <div class="menu-image">
-      <h2 class="image-h2">NESTO IZMEDJU</h2>
+      <h2 class="image-h2" id="between">NESTO IZMEDJU</h2>
     </div>
     <div class="menu-container">
-      <h2 class="menu-h2">NE BAS GLAVNA JELA</h2>
+      <h2 class="menu-h2" id="notReally">NE BAS GLAVNA JELA</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
@@ -494,11 +494,11 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">MOZARELLA STAPICI</p>
+              <p class="item-name" id="name30">MOZARELLA STAPICI</p>
               <p class="item-price">369</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc30">
                 pohovana mocarela sa marinara sosom
               </p>
             </div>
@@ -508,11 +508,11 @@
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">BRUSKETI SA PARADAJZOM</p>
+              <p class="item-name" id="name31">BRUSKETI SA PARADAJZOM</p>
               <p class="item-price">325</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc31">
                 paradajz, maslinovo ulje, svez bosiljak
               </p>
             </div>
@@ -520,11 +520,11 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">TORTILJA SA PILETINOM</p>
+              <p class="item-name" id="name32">TORTILJA SA PILETINOM</p>
               <p class="item-price">525</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc32">
                 piletina, guacamole sos, paradajz, iceberg, pavlaka, paprika
               </p>
             </div>
@@ -532,11 +532,11 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">NACHOS CIPS</p>
+              <p class="item-name">NACHOS CHIPS</p>
               <p class="item-price">325</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc33">
                 tortilja cips sa tri sosa, salsa, cedar, paradajz sos, guacamole
               </p>
             </div>
@@ -544,16 +544,16 @@
         </div>
       </div>
 
-      <h2 class="menu-h2">SENDVICI</h2>
+      <h2 class="menu-h2" id="sandwich">SENDVICI</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">PHILLY CHEESESTEAK SENDVIC</p>
+              <p class="item-name" id="name34">PHILLY CHEESESTEAK SENDVIC</p>
               <p class="item-price">699</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc34">
                 angus govedje meso, topljeni american cheese, luk, paprika
               </p>
             </div>
@@ -564,11 +564,11 @@
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">CLUB SENDVIC</p>
+              <p class="item-name" id="name35">CLUB SENDVIC</p>
               <p class="item-price">525</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc35">
                 piletina, jaje, panceta, pomfrit
               </p>
             </div>
@@ -576,12 +576,12 @@
         </div>
       </div>
 
-      <h2 class="menu-h2">PRILOZI</h2>
+      <h2 class="menu-h2" id="side">PRILOZI</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">GRILOVANO POVRCE</p>
+              <p class="item-name" id="name36">GRILOVANO POVRCE</p>
               <p class="item-price">259</p>
             </div>
             <div class="menu-desc">
@@ -591,7 +591,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">POMFRIT (200g)</p>
+              <p class="item-name" id="name37">POMFRIT (200g)</p>
               <p class="item-price">200</p>
             </div>
             <div class="menu-desc">
@@ -601,7 +601,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">WEDGES KROMPIR (200g)</p>
+              <p class="item-name" id="name38">WEDGES KROMPIR (200g)</p>
               <p class="item-price">200</p>
             </div>
             <div class="menu-desc">
@@ -611,7 +611,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">SUNKA (50g)</p>
+              <p class="item-name" id="name39">SUNKA (50g)</p>
               <p class="item-price">60</p>
             </div>
             <div class="menu-desc">
@@ -621,7 +621,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">PRSUT (100g)</p>
+              <p class="item-name" id="name40">PRSUT (100g)</p>
               <p class="item-price">505</p>
             </div>
             <div class="menu-desc">
@@ -631,7 +631,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">GVAKAMOLE SALSA</p>
+              <p class="item-name" id="name41">GVAKAMOLE SALSA</p>
               <p class="item-price">50</p>
             </div>
             <div class="menu-desc">
@@ -641,7 +641,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">BLUE CHEESE DRESING</p>
+              <p class="item-name" id="name42">BLUE CHEESE DRESING</p>
               <p class="item-price">50</p>
             </div>
             <div class="menu-desc">
@@ -651,7 +651,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">MARINARA SOS</p>
+              <p class="item-name" id="name43">MARINARA SOS</p>
               <p class="item-price">50</p>
             </div>
             <div class="menu-desc">
@@ -665,7 +665,7 @@
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">PUNJENI KROMPIR</p>
+              <p class="item-name" id="name44">PUNJENI KROMPIR</p>
               <p class="item-price">225</p>
             </div>
             <div class="menu-desc">
@@ -675,7 +675,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">SIR FETA (100g)</p>
+              <p class="item-name" id="name45">SIR FETA (100g)</p>
               <p class="item-price">95</p>
             </div>
             <div class="menu-desc">
@@ -685,7 +685,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">PANCETA (30g)</p>
+              <p class="item-name" id="name46">PANCETA (30g)</p>
               <p class="item-price">100</p>
             </div>
             <div class="menu-desc">
@@ -705,7 +705,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">SOS OD SUMSKOG VOCA</p>
+              <p class="item-name" id="name48">SOS OD SUMSKOG VOCA</p>
               <p class="item-price">100</p>
             </div>
             <div class="menu-desc">
@@ -715,7 +715,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">SOS OD ZELENOG BIBERA</p>
+              <p class="item-name" id="name49">SOS OD ZELENOG BIBERA</p>
               <p class="item-price">100</p>
             </div>
             <div class="menu-desc">
@@ -725,7 +725,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">SOS OD 4 VRSTE SIRA</p>
+              <p class="item-name" id="name50">SOS OD 4 VRSTE SIRA</p>
               <p class="item-price">100</p>
             </div>
             <div class="menu-desc">
@@ -735,7 +735,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">HLEB (200g)</p>
+              <p class="item-name" id="name51">HLEB (200g)</p>
               <p class="item-price">50</p>
             </div>
             <div class="menu-desc">
@@ -750,10 +750,10 @@
 
   <section class="menu">
     <div class="menu-image">
-      <h2 class="image-h2">DESERTI</h2>
+      <h2 class="image-h2 desert">DESERTI</h2>
     </div>
     <div class="menu-container">
-      <h2 class="menu-h2">DESERTI</h2>
+      <h2 class="menu-h2 desert">DESERTI</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
@@ -762,7 +762,7 @@
               <p class="item-price">295</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc52">
                 jabuke, sladoled
               </p>
             </div>
@@ -771,11 +771,11 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">AMERICKE PALACINKE</p>
+              <p class="item-name" id="name53">AMERICKE PALACINKE</p>
               <p class="item-price">365</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc53">
                 sa javorovim sirupom, puterom, sosom od sumskog voca i vanila sladoledom
               </p>
             </div>
@@ -789,7 +789,7 @@
               <p class="item-price">135</p>
             </div>
             <div class="menu-desc">
-              <p class="desc-p">
+              <p class="desc-p" id="desc54">
                 cimet, zuti secer, puter
               </p>
             </div>
