--- a/menu.html
+++ b/menu.html
@@ -801,12 +801,12 @@
 
   <section class="menu">
     <div class="menu-container">
-      <h2 class="menu-h2">TORTE I KOLACI</h2>
+      <h2 class="menu-h2" id="cakes">TORTE I KOLACI</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">KAPRI TORTA</p>
+              <p class="item-name" id="name54">KAPRI TORTA</p>
               <p class="item-price">320</p>
             </div>
             <div class="menu-desc">
@@ -818,7 +818,7 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">COKO-MALINA TORTA</p>
+              <p class="item-name" id="name55">COKO-MALINA TORTA</p>
               <p class="item-price">360</p>
             </div>
             <div class="menu-desc">
@@ -831,7 +831,7 @@
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">ORANGE JAFFA TORTA</p>
+              <p class="item-name" id="name56">ORANGE JAFFA TORTA</p>
               <p class="item-price">325</p>
             </div>
             <div class="menu-desc">
@@ -842,7 +842,7 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name">DUET LESNIK KOLAC</p>
+              <p class="item-name" id="name57">DUET LESNIK KOLAC</p>
               <p class="item-price">320</p>
             </div>
             <div class="menu-desc">
