--- a/gallery.html
+++ b/gallery.html
@@ -76,7 +76,7 @@
             ><img src="/assets/img/image00001-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/image00002.jpeg"
+            href="/assets/img/image00002.jpg"
             data-lightbox="mygallery"
             data-title="Title"
             ><img src="/assets/img/image00002-small.png" alt=""
