--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <section id="boxes">
       <div class="flex-container">
-        <div class="row wow fadeInRight">
+        <div class="row">
           <div class="boxes-image image-1"></div>
           <div class="boxes-content">
             <h2 id="lang-text1" class="boxes-h2">TEKST</h2>
@@ -96,7 +96,7 @@
       </div>
 
       <div class="flex-container">
-        <div class="row wow fadeInLeft">
+        <div class="row">
           <div class="boxes-content">
             <h2 class="boxes-h2">TEKST</h2>
             <p class="boxes-p">
@@ -112,7 +112,7 @@
       </div>
 
       <div class="flex-container">
-        <div class="row wow fadeInRight">
+        <div class="row">
           <div class="boxes-image image-3"></div>
           <div class="boxes-content">
             <h2 class="boxes-h2">TEKST</h2>
