--- a/menu.html
+++ b/menu.html
@@ -61,7 +61,7 @@
   
 
   <section class="menu">
-    <div class="menu-image">
+    <div class="menu-image" id="main">
       <h2 class="image-h2 mainDishes">GLAVNA JELA</h2>
     </div>
     <div class="menu-container">
@@ -282,7 +282,7 @@
   </section>
 
   <section class="menu">
-    <div class="menu-image">
+    <div class="menu-image" id="soupImg">
       <h2 class="image-h2 soup">SUPE</h2>
     </div>
     <div class="menu-container">
@@ -332,7 +332,7 @@
   </section>
 
   <section class="menu">
-    <div class="menu-image">
+    <div class="menu-image" id="saladImg">
       <h2 class="image-h2" id="salads">SALATE</h2>
     </div>
     <div class="menu-container">
@@ -449,7 +449,7 @@
   </section>
 
   <section class="menu">
-    <div class="menu-image">
+    <div class="menu-image" id="nacho">
       <h2 class="image-h2" id="between">NESTO IZMEDJU</h2>
     </div>
     <div class="menu-container">
@@ -749,7 +749,7 @@
   </section>
 
   <section class="menu">
-    <div class="menu-image">
+    <div class="menu-image" id="desert">
       <h2 class="image-h2 desert">DESERTI</h2>
     </div>
     <div class="menu-container">
