--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@
             optio doloribus dignissimos nam facilis in ea, cum dicta non harum
             cumque?
           </p>
-          <a href="menu.html" class="discover-btn wow fadeInUp">KARTA PICA</a>
+          <a href="menu-caffe.html" class="discover-btn wow fadeInUp"
+            >KARTA PICA</a
+          >
         </div>
       </div>
     </section>
