--- a/gallery.html
+++ b/gallery.html
@@ -70,35 +70,28 @@
         <!-- <h2 class="gallery-heading">INTERIOR</h2> -->
         <div class="gallery-container">
           <a
-            href="/assets/img/image00001.jpeg"
+            href="/assets/img/1.png"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/image00001-small.png" alt=""
+            ><img src="/assets/img/1-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/image00002.jpg"
+            href="/assets/img/3.png"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/image00002-small.png" alt=""
+            ><img src="/assets/img/3-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/image00003.jpeg"
+            href="/assets/img/4.png"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/image00003-small.png" alt=""
+            ><img src="/assets/img/4-small.png" alt=""
           /></a>
           <a
-            href="/assets/img/image00007.png"
+            href="/assets/img/6.png"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/image00007-small.png" alt=""
-          /></a>
-
-          <a
-            href="/assets/img/bgg1.jpg"
-            data-lightbox="mygallery"
-            data-title="Title"
-            ><img src="/assets/img/bgg1-small.png" alt=""
+            ><img src="/assets/img/6-small.png" alt=""
           /></a>
           <a
             href="/assets/img/bgg1.jpg"
@@ -152,12 +145,6 @@
             ><img src="/assets/img/bgg1-small.png" alt=""
           /></a>
 
-          <a
-            href="/assets/img/bgg1.jpg"
-            data-lightbox="mygallery"
-            data-title="Title"
-            ><img src="/assets/img/bgg1-small.png" alt=""
-          /></a>
           <a
             href="/assets/img/bgg1.jpg"
             data-lightbox="mygallery"
