--- a/menu.html
+++ b/menu.html
@@ -826,6 +826,17 @@
               </p>
             </div>
           </div>
+
+          <div class="menu-item">
+            <div class="items">
+              <p class="item-name">TULUMBA</p>
+              <p class="item-price">160</p>
+            </div>
+            <div class="menu-desc">
+              <p class="desc-p">
+              </p>
+            </div>
+          </div>
         </div>
 
         <div class="col">
@@ -850,6 +861,7 @@
               </p>
             </div>
           </div>
+
         </div>
       </div>
     </div>
@@ -880,6 +892,7 @@
 
   <script src="assets/js/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
+  <script type="text/javascript" src="assets/js/translate-menu.js"></script>
   <script src="assets/js/anime.min.js"></script>
   
 </body>
